[package]
authors = ["Justin Duch <justin@duch.me>"]
categories = ["api-bindings", "authentication", "network-programming"]
description = "Simple and (a)synchronous Reddit API wrapper"
documentation = "https://docs.rs/roux"
edition = "2021"
exclude = [".github/*", ".gitignore"]
keywords = ["api", "async", "reddit"]
license = "MIT"
name = "roux"
readme = "README.md"
repository = "https://github.com/halcyonnouveau/roux"
version = "2.3.52"

[dependencies]
html-escape = "0.2.13"
maybe-async = "0.2.9"
reqwest = { version = "0.13.2", default-features = false, features = [
    "form",
    "json",
    "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = { version = "0.1.20", optional = true }
tokio = { version = "1.8.4", default-features = false }

[dev-dependencies]
dotenv = "0.15"
serde_urlencoded = "0.7.1"
tokio = { version = "1.8.4", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
blocking = ["maybe-async/is_sync", "reqwest/blocking"]
default = ["native-tls"]
json-error-path = ["dep:serde_path_to_error"]
log-json-on-error = []
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
